# Final_Haskel_Project

./: TicTacToe.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/d51d387c/: cabal_macros.h
.stack-work/install/aarch64-osx/d4903dbeafe463b12205471e6a56dcde70c2c0409089edd06d76409e4925defb/8.10.7/lib/aarch64-osx-ghc-8.10.7/: libHSTicTacToe-0.1.0.0-L4VC7FkPlnpGqvaK4XrtCZ-ghc8.10.7.dylib
.stack-work/install/aarch64-osx/d4903dbeafe463b12205471e6a56dcde70c2c0409089edd06d76409e4925defb/8.10.7/lib/aarch64-osx-ghc-8.10.7/TicTacToe-0.1.0.0-L4VC7FkPlnpGqvaK4XrtCZ/: HVC.hi  Tree.hi  Trial.dyn_hi
.stack-work/install/aarch64-osx/d4903dbeafe463b12205471e6a56dcde70c2c0409089edd06d76409e4925defb/8.10.7/pkgdb/: TicTacToe-0.1.0.0-L4VC7FkPlnpGqvaK4XrtCZ.conf  package.cache
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: blackjack-0.1.0.0-inplace.conf  package.cache
src/: Board.hs  HVC.hs  HVH.hs  Prompt.hs  README.md  Tree.hs
